--- a/project_version/views/project.xml
+++ b/project_version/views/project.xml
@@ -67,9 +67,8 @@
             <field name="inherit_id" ref="project.view_task_form2"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='date_deadline']" position="after">
-                    <field name="requires_version" invisible="1"/>
                     <field name="version_id" domain="[('project_id', '=', project_id)]"
-                           attrs="{'invisible': [('project_id', '=', False)], 'required': [('requires_version', '=', True)]}" context="{'default_project_id': project_id}"/>
+                           attrs="{'invisible': [('project_id', '=', False)]}" context="{'default_project_id': project_id}"/>
                 </xpath>
             </field>
         </record>
