--- a/hr_holiday_exclude_special_days/views/public_holiday.xml
+++ b/hr_holiday_exclude_special_days/views/public_holiday.xml
@@ -20,7 +20,14 @@
                         <group col="4">
                             <field name="date" />
                             <field name="name" />
-                            <field name="company_id" />
+                        </group>
+                        <group>
+                            <field name="allocation_type"/>
+                            <field name="company_ids" widget="many2many_tags" attrs="{'invisible': [('allocation_type', '!=', 'company')]}" />
+                            <field name="tag_ids" widget="many2many_tags" attrs="{'invisible': [('allocation_type', '!=', 'tags')]}"/>
+                        </group>
+                        <group>
+                            <field name="employee_ids" widget="many2many_tags" />
                         </group>
                     </sheet>
                 </form>
@@ -34,7 +41,7 @@
                 <tree string="Public Holidays">
                     <field name="date" />
                     <field name="name" />
-                    <field name="company_id" />
+                    <field name="employee_ids" widget="many2many_tags" />
                 </tree>
             </field>
         </record>
