BEL-10: Replace One2Many by Many2many

--- a/harmonized_system_code/views/res_country.xml
+++ b/harmonized_system_code/views/res_country.xml
@@ -6,7 +6,7 @@
         <field name="inherit_id" ref="base.view_country_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='phone_code']" position="after">
-                <field name="hs_group_id"/>
+                <field name="hs_group_ids" widget="many2many_tags"/>
             </xpath>
         </field>
     </record>
