--- a/sale_customer_credit_limit/views/sale_view.xml
+++ b/sale_customer_credit_limit/views/sale_view.xml
@@ -3,11 +3,21 @@
     <record id="view_sales_config_inherit" model="ir.ui.view">
         <field name="name">sale settings</field>
         <field name="model">sale.config.settings</field>
-        <field name="inherit_id" ref="sales_team.view_sales_config"/>
+        <field name="inherit_id" ref="sale.view_sales_config"/>
         <field name="arch" type="xml">
             <xpath expr="//group[@name='customers']/field[last()]" position="after">
-                <field name="credit_limit_default"/>
+                <field name="default_credit_limit" class="oe_inline"/>
             </xpath>
         </field>
     </record>
+
+    <!-- <record id="view_order_form_inherit" model="ir.ui.view">
+        <field name="name">sale.order.form.inherit</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale.view_order_form"/>
+        <field name="arch" type="xml">
+
+        </field>
+    </record>-->
+
 </odoo>
