--- a/sale_customer_credit_limit/views/sale_view.xml
+++ b/sale_customer_credit_limit/views/sale_view.xml
@@ -6,18 +6,25 @@
         <field name="inherit_id" ref="sale.view_sales_config"/>
         <field name="arch" type="xml">
             <xpath expr="//group[@name='customers']/field[last()]" position="after">
-                <field name="default_credit_limit" class="oe_inline"/>
+                <field name="company_currency_id" invisible="1"/>
+                <field name="default_credit_limit" class="oe_inline" widget="monetary" options="{'currency_field': 'company_currency_id'}"/>
             </xpath>
         </field>
     </record>
 
-    <!-- <record id="view_order_form_inherit" model="ir.ui.view">
+    <record id="view_order_form_inherit" model="ir.ui.view">
         <field name="name">sale.order.form.inherit</field>
         <field name="model">sale.order</field>
         <field name="inherit_id" ref="sale.view_order_form"/>
         <field name="arch" type="xml">
-
+            <xpath expr="//header/button[@name='action_draft']" position="attributes">
+                <attribute name="states">cancel,approve</attribute>
+            </xpath>
+            <xpath expr="//header/button[@name='action_draft']" position="before">
+                <!-- TODO show approve only to managers -->
+                <button name="approve" states="approve" type="object" string="Approve" class="btn-primary"/>
+            </xpath>
         </field>
-    </record>-->
+    </record>
 
 </odoo>
